--- a/app/index.html
+++ b/app/index.html
@@ -122,7 +122,7 @@ current: index
             <option class="text-light-gray" value="" disabled selected>
               地區搜尋
             </option>
-            <option value="不限">不限</option>
+            <option value="不限">全部地區</option>
             <option value="台北">台北</option>
             <option value="台中">台中</option>
             <option value="高雄">高雄</option>
