--- a/app/index.html
+++ b/app/index.html
@@ -136,7 +136,7 @@ current: index
 <section class="mainArea">
   <div class="container">
     <div class="row">
-      <form class="col-12 tavelFilterForm">
+      <form class="col-lg-4 col-md-6 col-12 tavelFilterForm">
         <div class="form__inputList">
           <!-- <label class="form__label" for="ticketPlace ">景點地區</label> -->
           <select
