--- a/app/index.html
+++ b/app/index.html
@@ -154,8 +154,11 @@ current: index
           </select>
         </div>
       </form>
-      <div class="col-lg-4 col-md-6 col-12 d-flex align-items-center">
+      <div class="col-lg-4 col-md-6 col-12 ">
         <p class="filterResult text-light-gray" id="filterResult"></p>
+      </div>
+      <div class="col-lg-4 col-12">
+        <div id="chart"></div>
       </div>
     </div>
     <ul class="row travelCardList">
