第七週主線完成

--- a/app/index.html
+++ b/app/index.html
@@ -158,7 +158,7 @@ current: index
         <p class="filterResult text-light-gray" id="filterResult"></p>
       </div>
       <div class="col-lg-4 col-12">
-        <div id="chart"></div>
+        <div id="chart--location" class="chart--location"></div>
       </div>
     </div>
     <ul class="row travelCardList">
